--- a/app/reset/reset.css
+++ b/app/reset/reset.css
@@ -216,14 +216,14 @@ textarea::-webkit-input-placeholder {
     position: relative;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+/*    overflow: hidden;*/
 }
 
 .container {
     position: relative;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+/*    overflow: hidden;*/
 }
 
 .nav-wrapper{
