--- a/app/pages/adv/detail.css
+++ b/app/pages/adv/detail.css
@@ -229,7 +229,10 @@
 .adv-packet-record ul {
     position: relative;
     top: 0px;
-    -webkit-animation: scrollMove 30s linear 0.5s infinite;
+}
+
+.adv-packet-record .slide{
+   -webkit-animation: scrollMove 30s linear 0.5s infinite;
     animation: scrollMove 30s linear 0.5s infinite;
 }
 
@@ -410,7 +413,7 @@
 
 .packet-wrapper .packet-title {
     position: relative;
-    margin-top: .1rem;
+    margin-top: .2rem;
     text-align: center;
     font-size: 16px;
     color: #ffd8b0;
@@ -469,14 +472,17 @@
 }
 
 .packet-wrapper .packet-money:before {
-    content: '';
-    background: url(../../images/rmb_icon.png) no-repeat;
+    content: '\FFE5';
+    position: absolute;
     display: inline-block;
     width: .28rem;
     height: .36rem;
-    background-size: 100%;
     margin-right: 5px;
     vertical-align: baseline;
+    font-size: 24px;
+    color: #fcbf81;
+    top: .42rem;
+    left: 1.7rem;
 }
 
 .packet-wrapper .packet-remind {
@@ -495,17 +501,23 @@
 }
 
 .packet-wrapper .packet-ranking span {
-    font-size: 30px;
+    font-size: 20px;
+}
+
+.packet-wrapper .packet-remindTip{
+    position: absolute;
+    font-size: 25px;
+    color: #fcbf81;
+    left: 1.8rem;
+    top: 5rem;
 }
 
 .packet-wrapper .packet-more {
-    position: relative;
-    text-align: center;
+    position: absolute;
     font-size: 14px;
     color: #fff;
-    background: url(../../images/more_icon.png) no-repeat;
-    background-position: 72% 49%;
-    background-size: .17rem .27rem;
+    bottom: 1rem;
+    left: 2rem;
 }
 
 @-webkit-keyframes scaleIn {
