--- a/app/pages/adv/detail.css
+++ b/app/pages/adv/detail.css
@@ -70,7 +70,8 @@
 .adv-packet-record {
     position: relative;
     width: 100%;
-    height: 138px;
+/*    height: 138px;*/
+    max-height: 138px;
     background-color: #eee;
     overflow: hidden;
 }
@@ -367,7 +368,7 @@
     -webkit-animation-duration: 1s;
     animation-duration: 1s;
     -webkit-animation-fill-mode: both;
-    animation-fill-mode: both; 
+    animation-fill-mode: both;
 /*    -webkit-animation-delay: .1s;
     animation-delay: .1s;*/
 }
@@ -481,7 +482,7 @@
     vertical-align: baseline;
     font-size: 24px;
     color: #fcbf81;
-    top: .42rem;
+    top: .4rem;
     left: 1.7rem;
 }
 
