--- a/app/pages/adv/detail.css
+++ b/app/pages/adv/detail.css
@@ -2,10 +2,43 @@
     position: relative;
     width: 100%;
     height: 100%;
-    overflow-y: auto;
 }
 
-.adv-player {
+.video-wrapper{
+    position: relative;
+    width: 100%;
+    height: 220px;
+}
+
+.video-cover{
+    position: absolute;
+    top:0; 
+    left:0;
+    z-index: 90;
+    width:100%;
+    height:220px;
+    background-image: url(../../images/adv_bg_02.jpg);
+    background-repeat:no-repeat;
+    background-size: cover;
+    display: none;
+}
+
+.video-pause{
+    position: absolute;
+    top:50%; 
+    left:50%;
+    z-index: 91;
+    display: inline-block;
+    width:55.5px;
+    height:55.5px;
+    margin-left:-25.25px;
+    margin-top:-25.25px;
+    background-image: url(../../images/video_pause_icon.png);
+    background-repeat:no-repeat;
+    background-size: cover;
+}
+
+.video-player{
     width: 100%;
     height: 220px;
 }
@@ -21,7 +54,7 @@
 
 .adv-detial-bar > div:nth-child(1) {
     width: 40%;
-    padding-left:.3rem;
+    padding-left: .3rem;
 }
 
 .adv-detial-bar > div:nth-child(1):before {
@@ -32,7 +65,7 @@
     background: url(../../images/adv_amt_icon2.png) repeat;
     background-size: contain;
     vertical-align: -5px;
-    margin-right:.1rem;
+    margin-right: .1rem;
 }
 
 .adv-detial-bar > div:nth-child(2) {
@@ -70,7 +103,6 @@
 .adv-packet-record {
     position: relative;
     width: 100%;
-/*    height: 138px;*/
     max-height: 138px;
     background-color: #eee;
     overflow: hidden;
@@ -81,23 +113,23 @@
 }
 
 .adv-packet-record li > div:nth-child(1) {
-    width: 15%;
+    width: 20%;
     text-align: center;
 }
 
 .adv-packet-record li > div:nth-child(2) {
-    width: 30%;
+    width: 25%;
     text-align: left;
 }
 
 .adv-packet-record li > div:nth-child(3) {
-    width: 30%;
+    width: 25%;
     text-align: left;
 }
 
 .adv-packet-record li > div:nth-child(4) {
-    width: 25%;
-    text-align: left;
+    width: 30%;
+    text-align: center;
 }
 
 .adv-packet-record li > div:nth-child(4) span {
@@ -232,8 +264,8 @@
     top: 0px;
 }
 
-.adv-packet-record .slide{
-   -webkit-animation: scrollMove 30s linear 0.5s infinite;
+.adv-packet-record .slide {
+    -webkit-animation: scrollMove 30s linear 0.5s infinite;
     animation: scrollMove 30s linear 0.5s infinite;
 }
 
@@ -249,7 +281,7 @@
 }
 
 .score-wrapper .score-content {
-    position: fixed;
+    position: absolute;
     left: 0;
     bottom: 0;
     height: 5.8rem;
@@ -340,7 +372,7 @@
     margin-top: 1rem
 }
 
-@-webkit-keyframes translateY{
+@-webkit-keyframes translateY {
     from {
         opacity: 0;
         -webkit-transform: translate3d(0, 100%, 0);
@@ -369,7 +401,7 @@
     animation-duration: 1s;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
-/*    -webkit-animation-delay: .1s;
+    /*    -webkit-animation-delay: .1s;
     animation-delay: .1s;*/
 }
 
@@ -505,7 +537,7 @@
     font-size: 20px;
 }
 
-.packet-wrapper .packet-remindTip{
+.packet-wrapper .packet-remindTip {
     position: absolute;
     font-size: 25px;
     color: #fcbf81;
@@ -551,4 +583,3 @@
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
 }
-
