--- a/app/pages/adv/detail.css
+++ b/app/pages/adv/detail.css
@@ -4,41 +4,41 @@
     height: 100%;
 }
 
-.video-wrapper{
+.video-wrapper {
     position: relative;
     width: 100%;
     height: 220px;
 }
 
-.video-cover{
+.video-cover {
     position: absolute;
-    top:0; 
-    left:0;
+    top: 0;
+    left: 0;
     z-index: 90;
-    width:100%;
-    height:220px;
+    width: 100%;
+    height: 220px;
     background-image: url(../../images/adv_bg_02.jpg);
-    background-repeat:no-repeat;
+    background-repeat: no-repeat;
     background-size: cover;
     display: none;
 }
 
-.video-pause{
+.video-pause {
     position: absolute;
-    top:50%; 
-    left:50%;
+    top: 50%;
+    left: 50%;
     z-index: 91;
     display: inline-block;
-    width:55.5px;
-    height:55.5px;
-    margin-left:-25.25px;
-    margin-top:-25.25px;
+    width: 55.5px;
+    height: 55.5px;
+    margin-left: -25.25px;
+    margin-top: -25.25px;
     background-image: url(../../images/video_pause_icon.png);
-    background-repeat:no-repeat;
+    background-repeat: no-repeat;
     background-size: cover;
 }
 
-.video-player{
+.video-player {
     width: 100%;
     height: 220px;
 }
@@ -110,10 +110,12 @@
 
 .adv-packet-record li {
     height: 46px;
+    color: #9f786f;
+    font-size: 14px;
 }
 
 .adv-packet-record li > div:nth-child(1) {
-    width: 20%;
+    width: 15%;
     text-align: center;
 }
 
@@ -123,13 +125,14 @@
 }
 
 .adv-packet-record li > div:nth-child(3) {
-    width: 25%;
+    width: 30%;
     text-align: left;
 }
 
 .adv-packet-record li > div:nth-child(4) {
     width: 30%;
-    text-align: center;
+    text-align: left;
+    color: #333;
 }
 
 .adv-packet-record li > div:nth-child(4) span {
@@ -425,6 +428,10 @@
     background-size: contain;
 }
 
+.packet-wrapper p {
+    color: #fcbf81;
+}
+
 .packet-wrapper .packet-close {
     position: absolute;
     width: .58rem;
@@ -450,13 +457,15 @@
     text-align: center;
     font-size: 16px;
     color: #ffd8b0;
+    min-height: 16px;
 }
 
 .packet-wrapper .packet-desprition {
     position: relative;
-    margin-top: .1rem;
+    margin-top: .2rem;
     text-align: center;
     font-size: 14px;
+    min-height: 14px;
     color: #ffd8b0;
 }
 
@@ -500,28 +509,28 @@
 .packet-wrapper .packet-money {
     position: relative;
     text-align: center;
-    font-size: 43px;
+    font-size: 0;
+    min-height: 43px;
     color: #fcbf81;
+    margin-top:.2rem;
 }
 
-.packet-wrapper .packet-money:before {
-    content: '\FFE5';
-    position: absolute;
-    display: inline-block;
-    width: .28rem;
-    height: .36rem;
-    margin-right: 5px;
-    vertical-align: baseline;
+.packet-wrapper .packet-money span{
+    font-size: 43px;
+}
+
+.packet-wrapper .packet-money span:before {
+    content: '￥';
     font-size: 24px;
     color: #fcbf81;
-    top: .4rem;
-    left: 1.7rem;
+    vertical-align: middle;
 }
 
 .packet-wrapper .packet-remind {
     position: relative;
     text-align: center;
     font-size: 14px;
+    min-height: 14px;
     color: #fff;
 }
 
@@ -530,6 +539,7 @@
     margin: .2rem 1rem;
     text-align: center;
     font-size: 14px;
+    min-height: 14px;
     color: #fcbf81;
 }
 
@@ -538,19 +548,23 @@
 }
 
 .packet-wrapper .packet-remindTip {
-    position: absolute;
-    font-size: 25px;
+    position: relative;
+    font-size: 35px;
     color: #fcbf81;
-    left: 1.8rem;
-    top: 5rem;
+    text-align: center;
+    margin-top: .6rem;
 }
 
 .packet-wrapper .packet-more {
     position: absolute;
     font-size: 14px;
     color: #fff;
-    bottom: 1rem;
-    left: 2rem;
+    bottom: 1.2rem;
+    text-align: center;
+    width: 100%;
+    background:url(../../images/more_icon.png) no-repeat;
+    background-size: .17rem .27rem;
+    background-position: 72% 42%;
 }
 
 @-webkit-keyframes scaleIn {
