--- a/app/pages/adv/detail.css
+++ b/app/pages/adv/detail.css
@@ -4,13 +4,12 @@
     height: 100%;
 }
 
-.video-wrapper {
-    position: relative;
-    width: 100%;
-    height: 220px;
+.video-wrapper{
+   position: relative;
+   width:100%;
 }
 
-.video-cover {
+.video-wrapper .video-cover {
     position: absolute;
     top: 0;
     left: 0;
@@ -23,7 +22,7 @@
     display: none;
 }
 
-.video-pause {
+.video-wrapper .video-pause {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -38,26 +37,27 @@
     background-size: cover;
 }
 
-.video-player {
+.video-wrapper .video-player{
+    position: relative;
     width: 100%;
     height: 220px;
 }
 
-.adv-detial-bar {
+.video-wrapper .video-detail {
     height: .88rem;
     background-color: #fff;
 }
 
-.adv-detial-bar > div {
+.video-wrapper .video-detail > div {
     font-size: 10px;
 }
 
-.adv-detial-bar > div:nth-child(1) {
+.video-wrapper .video-detail > div:nth-child(1) {
     width: 40%;
     padding-left: .3rem;
 }
 
-.adv-detial-bar > div:nth-child(1):before {
+.video-wrapper .video-detail > div:nth-child(1):before {
     content: '';
     display: inline-block;
     width: .34rem;
@@ -68,11 +68,11 @@
     margin-right: .1rem;
 }
 
-.adv-detial-bar > div:nth-child(2) {
+.video-wrapper .video-detail > div:nth-child(2) {
     width: 40%;
 }
 
-.adv-detial-bar > div:nth-child(2):before {
+.video-wrapper .video-detail > div:nth-child(2):before {
     content: '';
     display: inline-block;
     width: .34rem;
@@ -83,13 +83,13 @@
     margin-right: .1rem;
 }
 
-.adv-detial-bar > div:nth-child(3) {
+.video-wrapper .video-detail > div:nth-child(3) {
     width: 20%;
     text-align: right;
     margin-right: .47rem
 }
 
-.adv-detial-bar > div:nth-child(3):before {
+.video-wrapper .video-detail > div:nth-child(3):before {
     content: '';
     display: inline-block;
     width: .34rem;
@@ -100,7 +100,7 @@
     margin-right: .1rem;
 }
 
-.adv-packet-record {
+.record-wrapper {
     position: relative;
     width: 100%;
     max-height: 138px;
@@ -108,40 +108,50 @@
     overflow: hidden;
 }
 
-.adv-packet-record li {
+.record-wrapper li {
     height: 46px;
     color: #9f786f;
     font-size: 14px;
 }
 
-.adv-packet-record li > div:nth-child(1) {
+.record-wrapper li > div:nth-child(1) {
     width: 15%;
     text-align: center;
 }
 
-.adv-packet-record li > div:nth-child(2) {
+.record-wrapper li > div:nth-child(2) {
     width: 25%;
     text-align: left;
 }
 
-.adv-packet-record li > div:nth-child(3) {
+.record-wrapper li > div:nth-child(3) {
     width: 30%;
     text-align: left;
 }
 
-.adv-packet-record li > div:nth-child(4) {
+.record-wrapper li > div:nth-child(4) {
     width: 30%;
     text-align: left;
     color: #333;
 }
 
-.adv-packet-record li > div:nth-child(4) span {
+.record-wrapper li > div:nth-child(4) span {
     color: #f02800;
     font-size: 20px;
 }
 
-.adv-packet-record li img {
+.record-wrapper li img {
     width: .63rem;
+}
+
+.record-wrapper ul {
+    position: relative;
+    top: 0px;
+}
+
+.record-wrapper .slide {
+    -webkit-animation: scrollMove 30s linear 0.5s infinite;
+    animation: scrollMove 30s linear 0.5s infinite;
 }
 
 .correlation-wrapper {
@@ -260,16 +270,6 @@
     100% {
         transform: translateY(-460px);
     }
-}
-
-.adv-packet-record ul {
-    position: relative;
-    top: 0px;
-}
-
-.adv-packet-record .slide {
-    -webkit-animation: scrollMove 30s linear 0.5s infinite;
-    animation: scrollMove 30s linear 0.5s infinite;
 }
 
 .score-wrapper {
