--- a/app/pages/adv/detail.css
+++ b/app/pages/adv/detail.css
@@ -100,7 +100,7 @@
     margin-right: .1rem;
 }
 
-.record-wrapper {
+.packetRecord-wrapper {
     position: relative;
     width: 100%;
     max-height: 138px;
@@ -108,48 +108,50 @@
     overflow: hidden;
 }
 
-.record-wrapper li {
+.packetRecord-wrapper li {
     height: 46px;
     color: #9f786f;
     font-size: 14px;
 }
 
-.record-wrapper li > div:nth-child(1) {
+.packetRecord-wrapper li > div:nth-child(1) {
     width: 15%;
-    text-align: center;
+    text-align: left;
+    padding-left:.3rem;
 }
 
-.record-wrapper li > div:nth-child(2) {
+.packetRecord-wrapper li > div:nth-child(2) {
     width: 25%;
     text-align: left;
 }
 
-.record-wrapper li > div:nth-child(3) {
-    width: 30%;
+.packetRecord-wrapper li > div:nth-child(3) {
+    width: 25%;
     text-align: left;
 }
 
-.record-wrapper li > div:nth-child(4) {
-    width: 30%;
-    text-align: left;
+.packetRecord-wrapper li > div:nth-child(4) {
+    width: 35%;
+    text-align: right;
+    padding-right:.3rem;
     color: #333;
 }
 
-.record-wrapper li > div:nth-child(4) span {
+.packetRecord-wrapper li > div:nth-child(4) span {
     color: #f02800;
     font-size: 20px;
 }
 
-.record-wrapper li img {
+.packetRecord-wrapper li img {
     width: .63rem;
 }
 
-.record-wrapper ul {
+.packetRecord-wrapper ul {
     position: relative;
     top: 0px;
 }
 
-.record-wrapper .slide {
+.packetRecord-wrapper .slide {
     -webkit-animation: scrollMove 30s linear 0.5s infinite;
     animation: scrollMove 30s linear 0.5s infinite;
 }
@@ -399,15 +401,13 @@
     }
 }
 
-.score-wrapper .scoreAnimation {
+.score-wrapper .animation {
     -webkit-animation-name: translateY;
     animation-name: translateY;
     -webkit-animation-duration: 1s;
     animation-duration: 1s;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
-    /*    -webkit-animation-delay: .1s;
-    animation-delay: .1s;*/
 }
 
 .packet-wrapper {
@@ -567,7 +567,7 @@
     width: 100%;
     background:url(../../images/more_icon.png) no-repeat;
     background-size: .17rem .27rem;
-    background-position: 72% 42%;
+    background-position: 58% 42%;
 }
 
 @-webkit-keyframes scaleIn {
