--- a/app/common/common.css
+++ b/app/common/common.css
@@ -102,3 +102,9 @@
     overflow: hidden;
     visibility: hidden;
 }
+
+.ellipsis{
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
