--- a/app/pages/adv/list.css
+++ b/app/pages/adv/list.css
@@ -3,14 +3,6 @@
     width: 100%;
 }
 
-.adv-list-wrapper .video-play {
-    display: inline-block;
-    width: 1.11rem;
-    height: 1.11rem;
-    background: url(../../images/video_play_btn.png) repeat;
-    background-size: 100% 100%;
-}
-
 .adv-list-wrapper ul > li {
     position: relative;
     height: 4.22rem;
@@ -21,12 +13,9 @@
 }
 
 .adv-list-wrapper li > div:nth-child(1) {
+    position: relative;
     line-height: 1rem;
     height: 1rem;
-    min-height: 1rem;
-/*    background: url(../../images/adv_top_bg.png) repeat;
-    background-size: cover;*/
-/*    background-color: rgba(0,0,0,0.4)*/
 }
 
 .adv-list-wrapper li > div:nth-child(1) h2 {
@@ -34,25 +23,17 @@
     font-size: 17px;
     font-weight: 700;
     padding-left: .45rem;
+    width:6.6rem;
 }
 
 .adv-list-wrapper li > div:nth-child(2) {
-    line-height: 2.22rem;
-    height: 2.22rem;
-    min-height: 2.22rem;
-    text-align: center;
-}
-
-.adv-list-wrapper li > div:nth-child(3) {
+    position: relative;
+    margin-top:2.2rem;
     line-height: 1rem;
     height: 1rem;
-    min-height: 1rem;
-/*    background: url(../../images/adv_bottom_bg.png) repeat;
-    background-size: cover;*/
-/*    background-color: rgba(0,0,0,0.4)*/
 }
 
-.adv-list-wrapper li > div:nth-child(3) p {
+.adv-list-wrapper li > div:nth-child(2) p {
     height: 100%;
     color: #fff;
     font-size: 10px;
@@ -95,6 +76,26 @@
     border-radius: 8px;
 }
 
+
+.adv-list-wrapper ul > li:last-child{
+    border-bottom: none!important;
+}
+
+.adv-list-wrapper ul > li:before{
+    position: absolute;
+    content:'';
+    top:50%;
+    left:50%;
+    display: inline-block;
+    width: 1.11rem;
+    height: 1.11rem;
+    margin-top :-.555rem;
+    margin-left:-.555rem;
+    background: url(../../images/video_play_btn.png) repeat;
+    background-size: 100% 100%;
+    z-index: 3;
+}
+
 .adv-list-wrapper ul > li:after{
   position: absolute;
   content:'';
@@ -104,7 +105,7 @@
   width:100%;
   height:100%;
   background-color: rgba(0,0,0,0.4);
-  z-index: 3;
+  z-index: 2;
 }
 
 
