--- a/app/components/player/player.css
+++ b/app/components/player/player.css
@@ -9,11 +9,11 @@
     position: absolute;
     width:55.5px;
     height:55.5px;
-    bottom:50%!important; 
-    left:50%!important;
-    z-index: 91;
     margin-left:-25.25px;
     margin-bottom:-25.25px;
+    bottom:50%!important; 
+    left:50%!important;
+    z-index: 92;
     background-image: url(../../images/video_play_btn.png);
     background-repeat:no-repeat;
     background-size: cover;
@@ -76,6 +76,18 @@
     position: absolute;
     top: 0;
     left: 0
+}
+
+.prism-player .prism-cover:before{
+    position: absolute;
+    content:'';
+    display: block;
+    top: 0;
+    left: 0;
+    z-index: 91;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);    
 }
 
 .prism-player .prism-controlbar {
