--- a/app/pages/adv/detail.css
+++ b/app/pages/adv/detail.css
@@ -22,11 +22,23 @@
     display: none;
 }
 
+.video-wrapper .video-cover:before {
+    position: absolute;
+    content:'';
+    display: block;
+    top: 0;
+    left: 0;
+    z-index: 91;
+    width: 100%;
+    height: 220px;
+    background-color: rgba(0,0,0,0.4);
+}
+
 .video-wrapper .video-pause {
     position: absolute;
     top: 50%;
     left: 50%;
-    z-index: 91;
+    z-index: 92;
     display: inline-block;
     width: 55.5px;
     height: 55.5px;
