--- a/app/pages/register/register.css
+++ b/app/pages/register/register.css
@@ -53,7 +53,7 @@
     display: inline-block;
     height:.86rem;
     line-height: .86rem;
-    width:2.4rem;
+    width:40%;
     background-color:#b09b7c;
     vertical-align: middle;
     text-align: center;
@@ -66,7 +66,7 @@
 .register-content li:nth-child(2) input{
     display: inline-block;
     height:.86rem;
-    width:3.44rem;
+    width:60%;
     padding-left:15px;
     background-color: #eee;
     color:#999;
