--- a/app/components/player/player.css
+++ b/app/components/player/player.css
@@ -151,8 +151,8 @@
     width: 8px;
     height: 8px;
     top: -5px;
-    left: 0;
-    margin-left: -8px;
+    left: 5px;
+/*    margin-left: -8px;*/
     background-color: #5b5b5b;
     border: 4px solid #fff;
     border-radius: 8px;
@@ -205,5 +205,5 @@ body.prism-full-window {
     bottom: 0;
     right: 0;
     width: 100%!important;
-    height: 100%!important
+    height: 100%!important;
 }
