--- a/app/pages/adv/detail.css
+++ b/app/pages/adv/detail.css
@@ -115,57 +115,66 @@
 .packetRecord-wrapper {
     position: relative;
     width: 100%;
-    max-height: 138px;
+    max-height: 2rem;
     background-color: #eee;
     overflow: hidden;
 }
 
 .packetRecord-wrapper li {
-    height: 46px;
+    height: .52rem;
     color: #9f786f;
     font-size: 14px;
+    margin-top:.07rem;
+    text-align: left;
 }
 
-.packetRecord-wrapper li > div:nth-child(1) {
-    width: 15%;
-    text-align: left;
-    padding-left:.3rem;
+.packetRecord-wrapper li:first-child {
+    margin-top:.18rem;
+}
+
+.packetRecord-wrapper li:nth-of-type(1n){
+   color:#9f786f;
+}
+
+.packetRecord-wrapper li:nth-of-type(2n){
+   color:#cb9b23;
+}
+
+.packetRecord-wrapper li:nth-of-type(3n){
+   color:#2db890;
 }
 
 .packetRecord-wrapper li > div:nth-child(2) {
-    width: 25%;
-    text-align: left;
+    width: 27%;
+    margin-left:.2rem;
 }
 
 .packetRecord-wrapper li > div:nth-child(3) {
-    width: 25%;
-    text-align: left;
+    width: 22%;
+    margin-left:.35rem;
 }
 
 .packetRecord-wrapper li > div:nth-child(4) {
-    width: 35%;
-    text-align: right;
-    padding-right:.3rem;
+    margin-left:.35rem;
     color: #333;
 }
 
 .packetRecord-wrapper li > div:nth-child(4) span {
     color: #f02800;
-    font-size: 20px;
 }
 
 .packetRecord-wrapper li img {
-    width: .63rem;
+    width: .4rem;
+    height:.4rem;
+    border-radius: 50%;
+    margin-left:.28rem;
 }
 
 .packetRecord-wrapper ul {
     position: relative;
     top: 0px;
-}
-
-.packetRecord-wrapper .slide {
-    -webkit-animation: scrollMove 30s linear 0.5s infinite;
-    animation: scrollMove 30s linear 0.5s infinite;
+    transition: all 0.6s linear;
+    -webkit-transition: all 0.6s linear;
 }
 
 .correlation-wrapper {
@@ -214,78 +223,6 @@
 .correlation-wrapper .video-property > p {
     color: #666;
     font-size: 11px;
-}
-
-@-webkit-keyframes scrollMove {
-    0% {
-        -webkit-transform: translateY(0px);
-    }
-    10% {
-        -webkit-transform: translateY(-46px);
-    }
-    20% {
-        -webkit-transform: translateY(-92px);
-    }
-    30% {
-        -webkit-transform: translateY(-138px);
-    }
-    40% {
-        -webkit-transform: translateY(-184px);
-    }
-    50% {
-        -webkit-transform: translateY(-230px);
-    }
-    60% {
-        -webkit-transform: translateY(-276px);
-    }
-    70% {
-        -webkit-transform: translateY(-322px);
-    }
-    80% {
-        -webkit-transform: translateY(-368px);
-    }
-    90% {
-        -webkit-transform: translateY(-414px);
-    }
-    100% {
-        -webkit-transform: translateY(-460px);
-    }
-}
-
-@keyframes scrollMove {
-    0% {
-        transform: translateY(0);
-    }
-    10% {
-        transform: translateY(-46px);
-    }
-    20% {
-        transform: translateY(-92px);
-    }
-    30% {
-        transform: translateY(-138px);
-    }
-    40% {
-        transform: translateY(-184px);
-    }
-    50% {
-        transform: translateY(-230px);
-    }
-    60% {
-        transform: translateY(-276px);
-    }
-    70% {
-        transform: translateY(-322px);
-    }
-    80% {
-        transform: translateY(-368px);
-    }
-    90% {
-        transform: translateY(-414px);
-    }
-    100% {
-        transform: translateY(-460px);
-    }
 }
 
 .score-wrapper {
