--- a/app/pages/adv/detail.css
+++ b/app/pages/adv/detail.css
@@ -115,21 +115,17 @@
 .packetRecord-wrapper {
     position: relative;
     width: 100%;
-    max-height: 2rem;
+    max-height: 90px;
     background-color: #eee;
     overflow: hidden;
+    border-top: 1px solid #999;
 }
 
 .packetRecord-wrapper li {
-    height: .52rem;
+    height: 30px;
     color: #9f786f;
     font-size: 14px;
-    margin-top:.07rem;
     text-align: left;
-}
-
-.packetRecord-wrapper li:first-child {
-    margin-top:.18rem;
 }
 
 .packetRecord-wrapper li:nth-of-type(1n){
@@ -146,7 +142,7 @@
 
 .packetRecord-wrapper li > div:nth-child(2) {
     width: 27%;
-    margin-left:.2rem;
+    margin-left:.28rem;
 }
 
 .packetRecord-wrapper li > div:nth-child(3) {
@@ -164,8 +160,8 @@
 }
 
 .packetRecord-wrapper li img {
-    width: .4rem;
-    height:.4rem;
+    width: 20px;
+    height:20px;
     border-radius: 50%;
     margin-left:.28rem;
 }
@@ -173,8 +169,11 @@
 .packetRecord-wrapper ul {
     position: relative;
     top: 0px;
-    transition: all 0.6s linear;
-    -webkit-transition: all 0.6s linear;
+}
+
+.packetRecord-wrapper ul.move{
+    transition: all 0.2s linear;
+    -webkit-transition: all 0.2s linear;   
 }
 
 .correlation-wrapper {
