--- a/app/common/common.css
+++ b/app/common/common.css
@@ -16,7 +16,9 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    height: .98rem;   
+    height: 1.18rem;  
+    background: url(../images/nav_tab_bg.png) no-repeat;
+    background-size: contain;     
 }
 
 .nav-wrapper .nav{
