--- a/app/pages/adv/detail.css
+++ b/app/pages/adv/detail.css
@@ -407,7 +407,7 @@
     text-align: center;
     font-size: 16px;
     color: #ffd8b0;
-    min-height: 16px;
+    min-height: .48rem;
 }
 
 .packet-wrapper .packet-desprition {
@@ -415,7 +415,7 @@
     margin-top: .2rem;
     text-align: center;
     font-size: 14px;
-    min-height: 14px;
+    min-height: .4rem;
     color: #ffd8b0;
 }
 
@@ -424,18 +424,59 @@
     text-align: center;
     margin-top: .5rem;
     font-size: 20px;
+    min-height: .6rem;
     color: #ffd7af;
 }
 
 .packet-wrapper .packet-button {
     position: relative;
-    top: .5rem;
+    top: .35rem;
+    text-align: center;
+}
+
+.packet-wrapper .packet-open{
+    display: inline-block;
     width: 1.48rem;
     height: 1.48rem;
-    margin: 0 auto;
     background: url(../../images/packet_open_icon.png) no-repeat;
     background-size: contain;
+    perspective: 500;
+    -webkit-perspective: 500;    
+    transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
+    backface-visibility: visible;
 }
+
+@-webkit-keyframes rotate {
+    from {
+        transform: rotate3d(0,0,0,0);
+        -webkit-transform: rotate3d(0,0,0,0);  
+    }
+    to {
+        transform: rotate3d(0,1,0,360deg);
+        -webkit-transform:rotate3d(0,1,0,360deg);
+    }
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate3d(0,0,0,0);
+        -webkit-transform: rotate3d(0,0,0,0);  
+    }
+    to {
+        transform: rotate3d(0,1,0,360deg);
+        -webkit-transform:rotate3d(0,1,0,360deg);
+    }
+}
+
+.packet-wrapper .rotateAnimation {
+    animation: rotate 1s infinite linear;
+    -webkit-animation: rotate 1s infinite linear;
+    animation-fill-mode: both;
+    -webkit-animation-fill-mode: both;
+}
+
+
 
 .packet-wrapper .packet-result {
     position: absolute;
