--- a/app/pages/adv/list.css
+++ b/app/pages/adv/list.css
@@ -31,6 +31,7 @@
     margin-top:2.2rem;
     line-height: 1rem;
     height: 1rem;
+    z-index: 3;
 }
 
 .adv-list-wrapper li > div:nth-child(2) p {
@@ -40,7 +41,7 @@
 }
 
 .adv-list-wrapper p.adv-invest {
-    width: 30%;
+    width: 32.5%;
     background: url(../../images/adv_amt_icon.png) no-repeat;
     background-position: .45rem center;
     background-size: .34rem .34rem;
@@ -48,7 +49,7 @@
 }
 
 .adv-list-wrapper p.adv-packetcount {
-    width: 30%;
+    width: 32.5%;
     background: url(../../images/adv_packet_icon.png) no-repeat;
     background-position: left center;
     background-size: .34rem .34rem;
@@ -56,7 +57,7 @@
 }
 
 .adv-list-wrapper p.adv-score {
-    width: 20%;
+    width: 15%;
     background: url(../../images/adv_score_icon.png) no-repeat;
     background-position: left center;
     background-size: .34rem .34rem; 
@@ -66,7 +67,7 @@
 .adv-list-wrapper p.adv-time {
     width: 20%;
     text-align: right;
-    padding-right:.6rem;
+    padding-right:.5rem;
 }
 
 .adv-list-wrapper p.adv-time span {
