--- a/app/pages/setting/setting.css
+++ b/app/pages/setting/setting.css
@@ -10,7 +10,6 @@
     line-height: 1.08rem;
     margin:0 .3rem;
     border-bottom: 1px solid #999;
-    font-size: 17px;
     padding-left:0.18rem;
 }
 
@@ -28,15 +27,19 @@
 
 .setting-wrapper li a{
    display: block;
+   font-size: 15px;
    color:#333;
 }
 
-.setting-wrapper li span{
+.setting-wrapper li span:first-child{
+   font-size: 15px;
+}
+
+.setting-wrapper li span:last-child{
    position: absolute;
    right:.5rem;
    top:0;
-   font-size: 17px;
-   color:#333;
+   font-size: 15px;
 }
 
 .setting-wrapper .setting-btn{
