--- a/app/common/common.css
+++ b/app/common/common.css
@@ -18,7 +18,8 @@
     width: 100%;
     height: 1.18rem;  
     background: url(../images/nav_tab_bg.png) no-repeat;
-    background-size: contain;     
+    background-size: contain;   
+    z-index: 10;  
 }
 
 .nav-wrapper .nav{
