--- a/app/components/scroll/scroll.css
+++ b/app/components/scroll/scroll.css
@@ -18,23 +18,23 @@
 
 .scroll-loading {
     position: relative;
-    height: .8rem;
+    height: 40px;
     width: 100%;
     display: none;
 }
 
 .scroll-loading .loading-box {
     position: absolute;
-    top: .1rem;
+    top: 5px;
     left: 50%;
-    margin-left: -.5rem;
-    height: .6rem;
-    width: .6rem;
+    margin-left: -25px;
+    height: 30px;
+    width: 30px;
 }
 
 .scroll-loading .loading-rond {
-    height: .6rem;
-    width: .6rem;
+    height: 30px;
+    width: 30px;
     border: 1px solid #0CF;
     border-radius: 50%;
     position: absolute;
@@ -45,8 +45,8 @@
 .scroll-loading .loading-rond .rond {
     position: absolute;
     border-radius: 50%;
-    height: .1rem;
-    width: .1rem;
+    height: 5px;
+    width: 5px;
     background-color: #0CF;
     top: .05rem;
     left: 0;
@@ -58,7 +58,7 @@
     width: .4rem;
     color: #fff;
     text-align: center;
-    margin: .1rem;
+    margin: 5px;
     border-radius: 40px;
     background: #0CF;
 }
@@ -66,9 +66,9 @@
 .scroll-loading .loading-center p {
     position: absolute;
     color: #999;
-    left: .6rem;
+    left: 30px;
     font-size: 10px;
     width: 100px;
     text-align: left;
-    top: .02rem;
+    top: 1px;
 }
