--- a/app/pages/mine/mine.css
+++ b/app/pages/mine/mine.css
@@ -74,23 +74,20 @@
 }
 
 .mine-list-wrapper li:nth-child(2) {
-    background: url(../../images/feedback_icon.png) no-repeat;
+    background: url(../../images/invite_icon.png) no-repeat;
     background-size: .54rem .54rem;
     background-position: .38rem center;
 }
 
 .mine-list-wrapper li:nth-child(3) {
-    background: url(../../images/about_product_icon.png) no-repeat;
+    background: url(../../images/feedback_icon.png) no-repeat;
     background-size: .54rem .54rem;
     background-position: .38rem center;
 }
 
 .mine-list-wrapper li:nth-child(4) {
-    margin-bottom: .58rem
-}
-
-.mine-list-wrapper li:nth-child(4) {
-    background: url(../../images/link_us_icon.png) no-repeat;
+    margin-bottom: .58rem;
+    background: url(../../images/about_product_icon.png) no-repeat;
     background-size: .54rem .54rem;
     background-position: .38rem center;
 }
